--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
 asgiref==3.8.1
+certifi==2024.7.4
+charset-normalizer==3.3.2
 Django==4.2
 django-bootstrap5==24.2
 django-environ==0.11.2
+django-rosetta==0.10.0
+idna==3.7
 pillow==10.4.0
+polib==1.2.0
+requests==2.32.3
 sqlparse==0.5.1
 tzdata==2024.1
+urllib3==2.2.2
